# Brutus

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  brutus-iam-role.yaml  image_recognition.py  logging_utils.py  main.py  mainbrutus.py  polly.py  pyproject.toml  raspberrypi_picture.py  rekognition.py  speech_generator.py  transcribe.py
backend/: .env.template  Dockerfile  api.py  console.py  docker-compose.yml  image_recognition.py  logging_utils.py  main.py  pyproject.toml  pytest.ini  speech_generator.py
backend/tests/: test_api.py  test_image_analysis_integration.py  test_image_analysis_unit.py  test_main.py  tests.py
frontend/: .env.template  frontend_gui.py  main.py  pyproject.toml
frontend/static/styles/: main.css
frontend/tests/: test_main.py
raspberrypi_client/: brutus_pi.py  logging_utils.py  pyproject.toml
raspberrypi_client/tests/: test_brutus_pi.py
scripts/: start_client.sh  start_fe_be.sh  stop.sh
tests/: test_image_analysis.py  test_image_analysis_integration.py  test_image_analysis_unit.py  tests.py
