[project]
name = "B.R.U.T.U.S-Backend"
version = "1.0.0"
description = "Brutus' backend services"
license = "MIT"
authors = [
    {name = "Antti Väisänen", email = "avaisan@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "pre-commit (>=4.1.0,<5.0.0)",
    "boto3 (>=1.36.16,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "python-json-logger (>=3.2.1,<4.0.0)",
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn[standard] (>=0.24.0,<1.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "pydantic (>=2.4.2,<3.0.0)",
    "pydantic-settings (>=2.0.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = ">=23.11.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
mypy = ">=1.7.0,<2.0.0"
flake8 = ">=6.1.0,<7.0.0"
httpx = ">=0.25.0,<1.0.0"
pytest-asyncio = ">=0.21.1,<1.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
taskipy = ">=1.12.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "uvicorn api:app --host 0.0.0.0 --port 8000"
dev = "uvicorn api:app --host 127.0.0.1 --port 8000 --reload"
test = "pytest"
lint = "flake8 ."
format = "black ."
check = "mypy ."


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
