[project]
name = "B.R.U.T.U.S-Frontend"
version = "1.0.0"
description = "Frontend for B.R.U.T.U.S."
license = "MIT"
authors = [
    {name = "Antti Väisänen", email = "avaisan@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn[standard] (>=0.24.0,<1.0.0)",
    "reactpy (>=1.0.1)",
    "httpx (>=0.25.1)",
    "pytest (>=8.3.4,<9.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "python-json-logger (>=3.2.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
