[project]
name = "raspberrypi_client"
version = "0.1.0"
description = "Raspberry Pi client to take pictures etc to get input for Brutus API"
authors = [
    {name = "Antti Väisänen",email = "avaisan@proton.me"}
]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
picamera2 = "*"
Pillow = "*"
requests = "*"
pygame = "^2.6.1"
python-json-logger = "^3.2.1"


[tool.poetry.group.dev.dependencies]
black = ">=23.11.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
mypy = ">=1.7.0,<2.0.0"
flake8 = ">=6.1.0,<7.0.0"
pytest = "^8.3.4"
pytest-asyncio = ">=0.21.1,<1.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
taskipy = ">=1.12.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest tests/ -v"
run = "python3 brutus_pi.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: mark test as an async test"
]
