[tool.poetry]
name = "raspberrypi_client"
version = "0.1.0"
description = "Raspberry Pi client to take pictures etc to get input for Brutus API"
license = "MIT"
authors = ["Antti Väisänen <avaisan@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Pillow = "*"
requests = "*"
pygame = "^2.6.1"
python-json-logger = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = ">=23.11.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
mypy = ">=1.7.0,<2.0.0"
flake8 = ">=6.1.0,<7.0.0"
pytest = "^8.3.4"
pytest-asyncio = ">=0.21.1,<1.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
taskipy = ">=1.12.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python3 brutus_pi.py"
dev = "python3 brutus_pi.py --debug"
test = "pytest tests/ -v"
lint = "flake8 ."
format = "black ."
check = "mypy ."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: mark test as an async test"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
